--- a/SpeechRecognition/SpeechRecognition/Storyboard/Base.lproj/Main.storyboard
+++ b/SpeechRecognition/SpeechRecognition/Storyboard/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lNM-d7-KhT">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J2X-Pa-sIN">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
@@ -52,11 +52,11 @@
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Gnj-KC-LFg">
-                                <rect key="frame" x="0.0" y="44" width="414" height="269"/>
+                                <rect key="frame" x="0.0" y="102" width="414" height="250"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="269" id="f4a-bN-Sqi"/>
+                                    <constraint firstAttribute="height" constant="250" id="f4a-bN-Sqi"/>
                                 </constraints>
                                 <color key="separatorColor" systemColor="systemGrayColor"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -93,7 +93,7 @@
                                 <rect key="frame" x="10" y="321" width="394" height="411"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Text will appear here when you start speaking" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="20" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gUJ-vy-0Bn">
-                                        <rect key="frame" x="10" y="10" width="374" height="391"/>
+                                        <rect key="frame" x="10" y="47" width="374" height="354"/>
                                         <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="30"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -103,9 +103,31 @@
                                     <constraint firstAttribute="bottom" secondItem="gUJ-vy-0Bn" secondAttribute="bottom" constant="10" id="YZr-c2-idU"/>
                                     <constraint firstItem="gUJ-vy-0Bn" firstAttribute="leading" secondItem="kuU-hv-vum" secondAttribute="leading" constant="10" id="Zlh-TV-oyr"/>
                                     <constraint firstAttribute="trailing" secondItem="gUJ-vy-0Bn" secondAttribute="trailing" constant="10" id="fuW-U1-EaX"/>
-                                    <constraint firstItem="gUJ-vy-0Bn" firstAttribute="top" secondItem="kuU-hv-vum" secondAttribute="top" constant="10" id="ljq-Fh-aSa"/>
+                                    <constraint firstItem="gUJ-vy-0Bn" firstAttribute="top" secondItem="kuU-hv-vum" secondAttribute="top" constant="47" id="ljq-Fh-aSa"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" alpha="0.65000000000000002" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c4p-o3-jWt">
+                                <rect key="frame" x="344" y="57" width="50" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="Qfv-KA-oYf"/>
+                                    <constraint firstAttribute="width" constant="50" id="gio-wg-RYU"/>
+                                </constraints>
+                                <state key="normal" image="russia"/>
+                                <connections>
+                                    <action selector="isRussianLang:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6g6-va-prq"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bmB-yo-34r">
+                                <rect key="frame" x="274" y="57" width="50" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="3HN-D7-rOq"/>
+                                    <constraint firstAttribute="height" constant="25" id="BOv-MR-m76"/>
+                                </constraints>
+                                <state key="normal" image="usa"/>
+                                <connections>
+                                    <action selector="isEnglishLang:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Whh-Pt-Ipb"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -114,23 +136,29 @@
                             <constraint firstItem="nii-G3-zdP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="6zd-0X-EsN"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kuU-hv-vum" secondAttribute="trailing" constant="10" id="8AM-sn-Idc"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="nii-G3-zdP" secondAttribute="bottom" constant="40" id="ABS-PW-Pnm"/>
+                            <constraint firstItem="Gnj-KC-LFg" firstAttribute="top" secondItem="c4p-o3-jWt" secondAttribute="bottom" constant="20" id="BGF-7Z-MwV"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="U3y-fL-atk" secondAttribute="bottom" constant="40" id="FPe-yf-47e"/>
+                            <constraint firstItem="Gnj-KC-LFg" firstAttribute="top" secondItem="bmB-yo-34r" secondAttribute="bottom" constant="20" id="JHa-Ho-hTU"/>
                             <constraint firstItem="U3y-fL-atk" firstAttribute="top" secondItem="kuU-hv-vum" secondAttribute="bottom" constant="20" id="KlN-Y0-KBz"/>
-                            <constraint firstItem="Gnj-KC-LFg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="OQ6-YG-8ZE"/>
-                            <constraint firstAttribute="trailing" secondItem="lNM-d7-KhT" secondAttribute="trailing" id="XyP-it-c6F"/>
+                            <constraint firstAttribute="bottom" secondItem="J2X-Pa-sIN" secondAttribute="bottom" id="Lwd-gF-107"/>
+                            <constraint firstItem="Gnj-KC-LFg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="58" id="OQ6-YG-8ZE"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="c4p-o3-jWt" secondAttribute="trailing" constant="20" id="Q1A-RU-4e1"/>
+                            <constraint firstItem="J2X-Pa-sIN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="RHt-Dh-0Ke"/>
+                            <constraint firstItem="J2X-Pa-sIN" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Tse-S1-3Yk"/>
+                            <constraint firstItem="c4p-o3-jWt" firstAttribute="leading" secondItem="bmB-yo-34r" secondAttribute="trailing" constant="20" id="V4J-nu-L8E"/>
                             <constraint firstItem="Gnj-KC-LFg" firstAttribute="centerX" secondItem="kuU-hv-vum" secondAttribute="centerX" id="Yny-K2-oua"/>
                             <constraint firstItem="U3y-fL-atk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="a8n-tN-y3T"/>
-                            <constraint firstAttribute="bottom" secondItem="lNM-d7-KhT" secondAttribute="bottom" id="bzD-gp-H3h"/>
                             <constraint firstItem="Gnj-KC-LFg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="eXe-G4-R6o"/>
-                            <constraint firstItem="lNM-d7-KhT" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="m3h-dl-9Ig"/>
-                            <constraint firstItem="kuU-hv-vum" firstAttribute="top" secondItem="Gnj-KC-LFg" secondAttribute="bottom" constant="8" id="oVQ-SV-pTo"/>
-                            <constraint firstItem="lNM-d7-KhT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="pQc-t1-4JT"/>
+                            <constraint firstAttribute="trailing" secondItem="J2X-Pa-sIN" secondAttribute="trailing" id="hC8-WR-pHa"/>
+                            <constraint firstItem="kuU-hv-vum" firstAttribute="top" secondItem="Gnj-KC-LFg" secondAttribute="bottom" constant="-31" id="oVQ-SV-pTo"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="backgroundView" destination="lNM-d7-KhT" id="T9c-IT-cHd"/>
+                        <outlet property="backgroundView" destination="J2X-Pa-sIN" id="9m5-AQ-Hfg"/>
+                        <outlet property="englishLanguegeButton" destination="bmB-yo-34r" id="GnP-lZ-zgU"/>
                         <outlet property="pauseButton" destination="nii-G3-zdP" id="1FU-J5-UMP"/>
                         <outlet property="playButton" destination="U3y-fL-atk" id="wZQ-Af-keP"/>
+                        <outlet property="russianLanguegeButton" destination="c4p-o3-jWt" id="sdx-kC-h6D"/>
                         <outlet property="tableView" destination="Gnj-KC-LFg" id="MQs-u0-h93"/>
                         <outlet property="textSpeech" destination="gUJ-vy-0Bn" id="XJy-h5-YMT"/>
                     </connections>
@@ -143,6 +171,8 @@
     <resources>
         <image name="mic.fill" catalog="system" width="108" height="128"/>
         <image name="pause.fill" catalog="system" width="116" height="128"/>
+        <image name="russia" width="137.5" height="91.5"/>
+        <image name="usa" width="512" height="269.5"/>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
